b=521940 don't paint the plugin socket window to avoid flicker on load r=roc